K8S.Yaml/4.ingress/4.1.ingress.hotel.nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hotelapi-ingress
  namespace: homeinns-pms
  annotations:
   kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  #第一个 域名解析映射到 service
  - host: hotelapi.cloudhotels.cn
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
              name: hotelapi-service
              port:
                  number: 5005

  #第二个 域名解析映射到 service
  - host: "*.bthhotels.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
              name: hotelapi-service
              port:
                  number: 5005
